--- a/chattingTest.html
+++ b/chattingTest.html
@@ -1,94 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Client</title>
-    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
-    <style>
-        #chat {
-            display: flex;
-            flex-direction: column;
-            height: 500px;
-            border: 1px solid #000;
-            overflow-y: auto;
-            padding: 10px;
-        }
-        #message-input {
-            margin-top: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WebSocket Chat Test</title>
+  <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+    }
+
+    #chatContainer {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    #chatLog {
+      height: 300px;
+      overflow-y: auto;
+      border: 1px solid #ddd;
+      padding: 10px;
+      margin-bottom: 20px;
+      background-color: #fafafa;
+    }
+
+    .message {
+      margin-bottom: 10px;
+      padding: 8px;
+      border-radius: 5px;
+      max-width: 60%;
+      word-wrap: break-word;
+    }
+
+    .my-message {
+      background-color: #dcf8c6;
+      margin-left: auto;
+      text-align: right;
+    }
+
+    .other-message {
+      background-color: #fff;
+      margin-right: auto;
+      text-align: left;
+    }
+
+    .system-message {
+      font-style: italic;
+      text-align: center;
+      background-color: #e8e8e8;
+    }
+
+    #messageInput {
+      display: flex;
+    }
+
+    #messageInput input {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    #messageInput button {
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      margin-left: 10px;
+      cursor: pointer;
+    }
+
+    #messageInput button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
-    <h1>Chat Application</h1>
+  <div id="chatContainer">
+    <h1>WebSocket Chat Room</h1>
 
     <div>
-        <label for="room">Room:</label>
-        <input type="text" id="room" placeholder="Enter room name" />
-        <button onclick="joinRoom()">Join Room</button>
-        <button onclick="leaveRoom()">Leave Room</button>
+      <label for="token">JWT Token:</label>
+      <input type="text" id="token" placeholder="Enter your JWT token">
     </div>
 
-    <div id="chat"></div>
-
-    <div id="message-input">
-        <input type="text" id="message" placeholder="Enter message" />
-        <button onclick="sendMessage()">Send</button>
+    <div>
+      <label for="room">Room Name:</label>
+      <input type="text" id="room" placeholder="Enter room name">
+      <button onclick="joinRoom()">Join Room</button>
+      <button onclick="leaveRoom()">Leave Room</button>
     </div>
 
-    <script>
-        const socket = io('ws://localhost:3000/chat', {
-            transports: ['websocket'],  // WebSocket 사용 명시
-            withCredentials: true,
-        }); // 서버의 WebSocket 주소
+    <div id="chatLog"></div>
 
-        // 클라이언트가 방에 참여
-        function joinRoom() {
-            const room = document.getElementById('room').value;
-            socket.emit('joinRoom', { room });
+    <div id="messageInput">
+      <input type="text" id="message" placeholder="Enter your message">
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </div>
+
+  <script>
+    let socket;
+
+    function connectSocket() {
+      const token = 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEsInVzZXJpZCI6ImpqYW5nIiwidXNlcmVtYWlsIjoiamphbmc2MjUxQGdtYWlsLmNvbSIsImlhdCI6MTcyODM0OTg0NiwiZXhwIjoxNzI4Mzg1ODQ2fQ.9UtXT_RKU6S8JAcq2qu1Z_loDzDpNXOsWqiFfkR7Sf4';
+      
+      socket = io('http://localhost:3000/chat', {
+        auth: {
+          token: token
         }
+      });
 
-        // 클라이언트가 방에서 나감
-        function leaveRoom() {
-            const room = document.getElementById('room').value;
-            socket.emit('leaveRoom', { room });
-        }
+      socket.on('connect', () => {
+        console.log('Connected to WebSocket server');
+      });
 
-        // 클라이언트가 메시지를 방에 전송
-        function sendMessage() {
-            const room = document.getElementById('room').value;
-            const messageContent = document.getElementById('message').value;
-            const message = {
-                room: room,
-                sender: 'User1', // 임의의 사용자 이름
-                content: messageContent
-            };
-            socket.emit('message', message); // 서버로 메시지 전송
-        }
+      socket.on('message', (data) => {
+        console.log('Message received:', data);
+        displayMessage(data, false);
+      });
 
-        // 서버로부터 'joinedRoom' 이벤트를 받으면 알림
-        socket.on('joinedRoom', (room) => {
-            const chatBox = document.getElementById('chat');
-            const msg = document.createElement('div');
-            msg.textContent = `You joined room: ${room}`;
-            chatBox.appendChild(msg);
-        });
+      socket.on('joinedRoom', (room) => {
+        console.log(`Joined room: ${room}`);
+        displaySystemMessage(`You have joined room: ${room}`);
+      });
 
-        // 서버로부터 'leftRoom' 이벤트를 받으면 알림
-        socket.on('leftRoom', (room) => {
-            const chatBox = document.getElementById('chat');
-            const msg = document.createElement('div');
-            msg.textContent = `You left room: ${room}`;
-            chatBox.appendChild(msg);
-        });
+      socket.on('leftRoom', (room) => {
+        console.log(`Left room: ${room}`);
+        displaySystemMessage(`You have left room: ${room}`);
+      });
+    }
 
-        // 서버로부터 'message' 이벤트를 받으면 채팅창에 메시지를 표시
-        socket.on('message', (message) => {
-            const chatBox = document.getElementById('chat');
-            const msg = document.createElement('div');
-            msg.textContent = `${message.sender}: ${message.content}`;
-            chatBox.appendChild(msg);
-        });
-    </script>
+    function joinRoom() {
+      const room = document.getElementById('room').value;
+      if (socket) {
+        socket.emit('joinRoom', { room: room });
+      }
+    }
+
+    function leaveRoom() {
+      const room = document.getElementById('room').value;
+      if (socket) {
+        socket.emit('leaveRoom', { room: room });
+      }
+    }
+
+    function sendMessage() {
+      const message = document.getElementById('message').value;
+      const room = document.getElementById('room').value;
+      if (socket) {
+        socket.emit('message', { room: room, message: message });
+        displayMessage({ message: message, sender: 'You' }, true); // 본인의 메시지는 'You'로 표시
+        document.getElementById('message').value = ''; // 메시지를 보낸 후 입력란 비우기
+      }
+    }
+
+    function displayMessage(data, isMine) {
+      const chatLog = document.getElementById('chatLog');
+      const messageElement = document.createElement('div');
+      messageElement.classList.add('message');
+      messageElement.textContent = `${data.sender}: ${data.message}`;
+
+      if (isMine) {
+        messageElement.classList.add('my-message');  // 내 메시지는 오른쪽에 정렬
+      } else {
+        messageElement.classList.add('other-message');  // 다른 사람 메시지는 왼쪽에 정렬
+      }
+
+      chatLog.appendChild(messageElement);
+      chatLog.scrollTop = chatLog.scrollHeight; // 스크롤을 맨 아래로
+    }
+
+    function displaySystemMessage(message) {
+      const chatLog = document.getElementById('chatLog');
+      const messageElement = document.createElement('div');
+      messageElement.classList.add('message', 'system-message');
+      messageElement.textContent = message;
+      chatLog.appendChild(messageElement);
+      chatLog.scrollTop = chatLog.scrollHeight;
+    }
+
+    window.onload = connectSocket;
+  </script>
 </body>
 </html>
