--- a/chattingTest.html
+++ b/chattingTest.html
@@ -16,53 +16,58 @@
   <button onclick="leaveRoom()">Leave Room</button>
 
   <script>
-
-
-    const token = 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjksInVzZXJpZCI6ImpqYW5nMTIiLCJ1c2VyZW1haWwiOiJqamFuZzYyNTFAZ21haWwuY29tIiwiaWF0IjoxNzI5MDUxNjM2LCJleHAiOjE3MjkwODc2MzZ9.4iQX3fmmdwNsmZqgiq6QQLtH2CH6O_Fg3indILa4RIc';
+    const token = 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjksInVzZXJpZCI6ImpqYW5nMTIiLCJ1c2VyZW1haWwiOiJqamFuZzYyNTFAZ21haWwuY29tIiwiaWF0IjoxNzMwNzgyODM1LCJleHAiOjE3MzA4MTg4MzV9.hdDswkGSNNBUdnvwjBPpjWjMVKJbsDDcjslw7ayfCdA';
     const room = 'testRoom';
 
-    // fetchChatHistory();
-
-    const socket = io('wss://www.daebak.store/chat', {
+    // Socket.IO 연결 설정
+    const socket = io('ws://localhost:3000/chat', {
       auth: {
         token: `${token}`
       }
     });
 
+    // 소켓이 연결되면 채팅 기록을 가져옵니다
     socket.on('connect', () => {
       console.log('Connected to server');
+      socket.emit('joinRoom', { room: room })
       fetchChatHistory();
     });
 
-    socket.on('message', (message) => {
-      console.log(message);
+    // 서버로부터 수신된 메시지를 화면에 추가
+    socket.on('emitmessage', (message) => {
+      console.log('Received message:', message);
       appendMessage(message);
     });
 
+    // 메시지 전송 함수
     function sendMessage() {
       const messageInput = document.getElementById('messageInput');
       const message = messageInput.value;
       socket.emit('message', { room: room, content: message });
-      messageInput.value = '';
-      // appendMessage({ sender: 'You', content: message, createdAt: new Date().toLocaleString() });
+      messageInput.value = '';  // 메시지 입력란 초기화
     }
 
+    // 방에 참여하는 함수
     function joinRoom() {
       socket.emit('joinRoom', { room: room });
     }
 
+    // 방을 나가는 함수
     function leaveRoom() {
       socket.emit('leaveRoom', { room: room });
     }
 
+    // 방 참여 이벤트 수신
     socket.on('joinedRoom', (room) => {
       console.log(`Joined room: ${room}`);
     });
 
+    // 방 나가기 이벤트 수신
     socket.on('leftRoom', (room) => {
       console.log(`Left room: ${room}`);
     });
 
+    // 과거 채팅 기록을 가져오는 함수
     function fetchChatHistory() {
       fetch(`https://www.daebak.store/chat/${room}`, {
         headers: {
@@ -71,7 +76,7 @@
       })
         .then(response => response.json())
         .then(messages => {
-          console.log(messages);
+          console.log('Chat history:', messages);
           const messagesDiv = document.getElementById('messages');
           messagesDiv.innerHTML = '';
           messages.forEach(message => appendMessage(message));
@@ -79,9 +84,12 @@
         .catch(error => console.error('Error fetching chat history:', error));
     }
 
+    // 메시지를 화면에 추가하는 함수
     function appendMessage(message) {
       const messagesDiv = document.getElementById('messages');
-      messagesDiv.innerHTML += `<p>${message.sender}: ${message.content}   ${message.createdAt}</p>`;
+      const messageElement = document.createElement('p');
+      messageElement.textContent = `${message.sender}: ${message.content}   ${message.createdAt}`;
+      messagesDiv.appendChild(messageElement);
     }
 
   </script>
